# stockfish

./: .gitignore  .gitlab-ci.yml  0001-Fix-alpine-linux-stack-size.patch  0001-fix-aarch64.patch  0001-fix-alpine-linux-stack-size.patch  Dockerfile  README.md  Vajolet  entrypoint  run.sh  server.c  server.py  server.rs  stockfish  vajolet-aarch.patch
server/: Cargo.toml
server/.cargo/: config
server/src/: main.rs
